--- a/tarea.html
+++ b/tarea.html
@@ -13,7 +13,7 @@
                 function(position) {
                     let lat = position.coords.latitude;
                     let lon = position.coords.longitude;
-                    window.location.href = https://www.google.com/maps?q=${lat},${lon};
+                    window.location.href = `https://www.google.com/maps?q=${lat},${lon}`;
                 },
                 function(error) {
                     alert("No se pudo obtener la ubicación: " + error.message);
